[package]
name = "live777"
description = "A very simple, high performance, edge WebRTC SFU"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

default-run = "live777"

[[bin]]
name = "live777"
path = "src/main.rs"

[[bin]]
name = "liveman"
path = "src/liveman.rs"

[[bin]]
name = "livenil"
path = "src/livenil.rs"

[[bin]]
name = "livecam"
path = "src/livecam.rs"

[[bin]]
name = "whipinto"
path = "src/whipinto.rs"

[[bin]]
name = "whepfrom"
path = "src/whepfrom.rs"

[[bin]]
name = "net4mqtt"
path = "src/net4mqtt.rs"

[workspace]
members = [
    ".",
    "libs/api",
    "libs/cli",
    "libs/http-log",
    "libs/iceserver",
    "libs/libwish",
    "libs/signal",
    "libs/rtsp",
    "libs/net4mqtt",
    "libs/storage",
    "liveion",
    "liveman",
    "livetwo",
    "livecam",
]

[workspace.package]
version = "0.8.1"
edition = "2024"
license = "MPL-2.0"
authors = ["BinBat Ltd <hey@binbat.com>"]
repository = "https://github.com/binbat/live777"

[workspace.dependencies]
webrtc = { git = "https://github.com/webrtc-rs/webrtc", rev = "4da5280" }
sdp = { git = "https://github.com/webrtc-rs/webrtc", rev = "4da5280" }

axum = "0.8"
axum-extra = "0.10"
tower-http = "0.6"
rust-embed = "8.7"
mime_guess = "2.0"

anyhow = "1.0"
clap = "4.5"
http = "1.3"
http-body = "1.0"
reqwest = { version = "0.12", features = [
    "rustls-tls",
], default-features = false }
serde = "1.0"
serde_json = "1.0"
tokio = "1.47"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
url = "2.5"
base64 = "0.22"

[dev-dependencies]
http = { workspace = true }
serde_json = { workspace = true }

api = { path = "libs/api" }
cli = { path = "libs/cli" }
reqwest = { workspace = true, features = ["socks", "json"] }
tempfile = "3"
anyhow = { workspace = true }

[dependencies]
liveion = { path = "liveion" }
liveman = { path = "liveman" }
livetwo = { path = "livetwo" }
livecam = { path = "livecam" }
net4mqtt = { path = "libs/net4mqtt" }
signal = { path = "libs/signal" }

storage = { path = "libs/storage" }

clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["process"] }
tracing = { workspace = true }
serde = { workspace = true }

toml = "0.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
webui = ["liveion/webui", "liveman/webui", "livecam/webui"]
net4mqtt = ["liveion/net4mqtt", "liveman/net4mqtt"]
recorder = ["liveion/recorder", "liveman/recorder"]

source = ["liveion/source"]
source-sdp = ["liveion/source-sdp"]
source-rtsp = ["liveion/source-rtsp"]
source-all = ["liveion/source-all"]
