[package]
name = "live777"
description = "A very simple, high performance, edge WebRTC SFU"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

default-run = "live777"

[[bin]]
name = "live777"
path = "src/main.rs"

[[bin]]
name = "liveman"
path = "src/liveman.rs"

[[bin]]
name = "livenil"
path = "src/livenil.rs"

[[bin]]
name = "livecam"
path = "src/livecam.rs"

[[bin]]
name = "whipinto"
path = "src/whipinto.rs"

[[bin]]
name = "whepfrom"
path = "src/whepfrom.rs"

[[bin]]
name = "livevod"
path = "src/livevod.rs"

[[bin]]
name = "net4mqtt"
path = "src/net4mqtt.rs"

[[bin]]
name = "datachannel_loadtest"
path = "src/bin/datachannel_loadtest.rs"
required-features = ["source"]
test = false
bench = false

[workspace]
members = [
    ".",
    "libs/api",
    "libs/cli",
    "libs/http-log",
    "libs/iceserver",
    "libs/libwish",
    "libs/signal",
    "libs/rtsp",
    "libs/net4mqtt",
    "libs/storage",
    "liveion",
    "liveman",
    "livetwo",
    "livecam",
    "livesrc",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
license = "MPL-2.0"
authors = ["BinBat Ltd <hey@binbat.com>"]
repository = "https://github.com/binbat/live777"

[workspace.dependencies]
webrtc = { version = "0.20.0-alpha.1", features = ["runtime-tokio"] }
rtc = "0.20.0-alpha.1"
rtc-ice = "0.20.0-alpha.1"
rtc-interceptor = "0.20.0-alpha.1"
rtc-rtcp = "0.20.0-alpha.1"
rtc-rtp = "0.20.0-alpha.1"
rtc-shared = "0.20.0-alpha.1"
sdp = "0.17.1"

axum = "0.8"
axum-extra = "0.10"
tower-http = "0.6"
rust-embed = "8.7"
mime_guess = "2.0"

anyhow = "1.0"
clap = "4.5"
http = "1.3"
http-body = "1.0"
reqwest = { version = "0.12", features = [
    "rustls-tls",
], default-features = false }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros"] }
tokio-util = "0.7.18"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
url = "2.5"
base64 = "0.22"

[dev-dependencies]
http = { workspace = true }
serde_json = { workspace = true }
portpicker = "0.1.1"

api = { path = "libs/api" }
cli = { path = "libs/cli" }
reqwest = { workspace = true, features = ["socks", "json"] }
tempfile = "3"
anyhow = { workspace = true }

[dependencies]
liveion = { path = "liveion" }
liveman = { path = "liveman" }
livetwo = { path = "livetwo" }
livecam = { path = "livecam" }
net4mqtt = { path = "libs/net4mqtt" }
signal = { path = "libs/signal" }

storage = { path = "libs/storage" }
api = { path = "libs/api" }

clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["process"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
opendal = "0.55.0"

toml = "0.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
source = ["liveion/source"]
webui = ["liveion/webui", "liveman/webui", "livecam/webui"]
net4mqtt = ["liveion/net4mqtt", "liveman/net4mqtt"]
recorder = ["liveion/recorder", "liveman/recorder"]
source-sdp = ["liveion/source-sdp"]
source-rtsp = ["liveion/source-rtsp"]
source-rtp = ["liveion/source-rtp"]
source-all = ["liveion/source-all"]

# --- livesrc / liveenc semantic features ---
livesrc-libcamera = ["liveion/livesrc-libcamera"]
livesrc-v4l2 = ["liveion/livesrc-v4l2"]
liveenc-v4l2-m2m = ["liveion/liveenc-v4l2-m2m"]
liveenc-rdk = ["liveion/liveenc-rdk"]

# (future) livesrc-encoded-source = ["liveion/livesrc-encoded-source"]

# Platform presets (recommended for users)
# native-rpi: Pi CSI (libcamera) + Pi USB (V4L2), both with V4L2 M2M encoder
native-rpi = ["liveion/native-rpi"]
native-generic-v4l2 = ["liveion/native-generic-v4l2"]
native-rdk = ["liveion/native-rdk"]

# --- deprecated aliases (1:1, will be removed) ---
source-libcamera = ["liveion/source-libcamera"]
source-v4l2 = ["liveion/source-v4l2"]
backend-rdk-x5 = ["liveion/backend-rdk-x5"]
encoder-rdk-x5 = ["liveion/encoder-rdk-x5"]
