[package]
name = "live777"
description = "A very simple, high performance, edge WebRTC SFU"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

default-run = "live777"

[[bin]]
name = "live777"
path = "src/main.rs"

[[bin]]
name = "liveman"
path = "src/liveman.rs"

[[bin]]
name = "livenil"
path = "src/livenil.rs"

[[bin]]
name = "livecam"
path = "src/livecam.rs"

[[bin]]
name = "whipinto"
path = "src/whipinto.rs"

[[bin]]
name = "whepfrom"
path = "src/whepfrom.rs"

[[bin]]
name = "whepprobe"
path = "src/whepprobe.rs"
required-features = ["rsmpeg"]
test = false
bench = false

[[bin]]
name = "whepwright"
path = "src/whepwright.rs"
required-features = ["whepwright"]
test = false
bench = false

[[bin]]
name = "whipsynth"
path = "src/whipsynth.rs"
required-features = ["rsmpeg"]
test = false
bench = false

[[bin]]
name = "livevod"
path = "src/livevod.rs"

[[bin]]
name = "net4mqtt"
path = "src/net4mqtt.rs"

[[bin]]
name = "datachannel_loadtest"
path = "src/bin/datachannel_loadtest.rs"
required-features = ["source"]
test = false
bench = false

[workspace]
members = [
    ".",
    "libs/api",
    "libs/cli",
    "libs/http-log",
    "libs/iceserver",
    "libs/libwish",
    "libs/signal",
    "libs/rtsp",
    "libs/net4mqtt",
    "libs/playwright-whep",
    "libs/storage",
    "libs/version",
    "liveion",
    "liveman",
    "livetwo",
    "livecam",
    "livehal",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
license = "MPL-2.0"
authors = ["BinBat Ltd <hey@binbat.com>"]
repository = "https://github.com/binbat/live777"

[workspace.dependencies]
async-trait = "0.1"
webrtc = { version = "0.20.0-rc.2", features = ["runtime-tokio"] }
rtc = "0.20.0-rc.2"
rtc-ice = "0.20.0-rc.2"
rtc-interceptor = "0.20.0-rc.2"
rtc-rtcp = "0.20.0-rc.2"
rtc-rtp = "0.20.0-rc.2"
rtc-shared = "0.20.0-rc.2"
sdp = "0.17.1"

axum = "0.8"
axum-extra = "0.12"
tower-http = "0.6"
rust-embed = "8.7"
mime_guess = "2.0"

anyhow = "1.0"
clap = "4.5"
http = "1.3"
http-body = "1.0"
reqwest = { version = "0.12", features = [
    "rustls-tls",
], default-features = false }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros"] }
tokio-util = "0.7.18"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
url = "2.5"
base64 = "0.22"
tempfile = "3"

[dev-dependencies]
http = { workspace = true }
serde_json = { workspace = true }
portpicker = "0.1.1"

api = { path = "libs/api" }
reqwest = { workspace = true, features = ["socks", "json"] }
async-trait = { workspace = true }
url = { workspace = true }
tempfile = { workspace = true }
webrtc = { workspace = true }
test-case = "3"
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time"] }

[dependencies]
liveion = { path = "liveion" }
liveman = { path = "liveman" }
livetwo = { path = "livetwo" }
livecam = { path = "livecam" }
net4mqtt = { path = "libs/net4mqtt" }
signal = { path = "libs/signal" }

storage = { path = "libs/storage" }
api = { path = "libs/api" }
version = { path = "libs/version" }

cli = { path = "libs/cli", optional = true }
clap = { workspace = true, features = ["derive"] }
rsmpeg = { version = "0.18", features = ["link_system_ffmpeg"], optional = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["process"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
opendal = "0.55.0"
playwright-whep = { path = "libs/playwright-whep", optional = true }

toml = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
source = ["liveion/source"]
cascade = ["liveion/cascade"]
webui = ["liveion/webui", "liveman/webui", "livecam/webui"]
net4mqtt = ["liveion/net4mqtt", "liveman/net4mqtt"]
recorder = ["liveion/recorder", "liveman/recorder"]
source-sdp = ["liveion/source-sdp"]
source-rtsp = ["liveion/source-rtsp"]
source-all = ["liveion/source-all"]
rtsp = ["liveion/rtsp"]

# Native source infrastructure (required by all capture-/encoder-* features)
native-source = ["liveion/native-source"]

# Capture backends
capture-libcamera = ["liveion/capture-libcamera", "native-source"]
capture-v4l2 = ["liveion/capture-v4l2", "native-source"]

# Encoder backends
encoder-v4l2-m2m = ["liveion/encoder-v4l2-m2m", "native-source"]
encoder-rdk = ["liveion/encoder-rdk", "native-source"]

# Platform presets (recommended for users)
native-rpi = ["capture-libcamera", "capture-v4l2", "encoder-v4l2-m2m"]
native-generic-v4l2 = ["capture-v4l2", "encoder-v4l2-m2m"]
native-rdk = ["capture-v4l2", "encoder-rdk"]

# Enables rsmpeg-based tools (whepprobe, whipsynth) and livetwo rsmpeg support
rsmpeg = ["livetwo/rsmpeg", "dep:rsmpeg", "dep:cli"]

# WHEP browser playback tester (Playwright-based)
whepwright = ["dep:playwright-whep"]

# Size-optimized release profile.
# Use with: cargo build --profile release-size --bin live777 --features ...
# Keeps opt-level=3 (runtime performance) but enables aggressive binary-size
# reductions: full LTO, single codegen unit, symbol stripping, and panic=abort.
[profile.release-size]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[patch.crates-io]
rtc = { git = "https://github.com/webrtc-rs/rtc", rev = "de84c7c872164ff6f473e814cb3b99afb3a5e422" }
rtc-ice = { git = "https://github.com/webrtc-rs/rtc", rev = "de84c7c872164ff6f473e814cb3b99afb3a5e422" }
rtc-interceptor = { git = "https://github.com/webrtc-rs/rtc", rev = "de84c7c872164ff6f473e814cb3b99afb3a5e422" }
rtc-rtcp = { git = "https://github.com/webrtc-rs/rtc", rev = "de84c7c872164ff6f473e814cb3b99afb3a5e422" }
rtc-rtp = { git = "https://github.com/webrtc-rs/rtc", rev = "de84c7c872164ff6f473e814cb3b99afb3a5e422" }
rtc-shared = { git = "https://github.com/webrtc-rs/rtc", rev = "de84c7c872164ff6f473e814cb3b99afb3a5e422" }
