[package]
name = "live777-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7.4", features = ["multipart", "tracing"] }
tower-http = { version = "0.5.2", features = ["fs", "auth", "trace", "cors"] }
anyhow = { version = "1", features = ["backtrace"] }
signal = { path = "../libs/signal" }
live777-http = { path = "../libs/live777-http" }
utils = { path = "../libs/utils" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.1", features = ["derive"] }
serde = { workspace = true, features = ["serde_derive"] }
base64 = "0.22.1"
toml = "0.8.10"
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
rust-embed = { version = "8.3.0", features = ["axum-ex"] }
mime_guess = "2.0.4"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "all-databases",
    "chrono",
] }
serde_json = "1.0.114"
reqwest = { version = "0.11.24", features = [
    "rustls-tls",
], default-features = false }
