[package]
name = "livecam"
description = "A very simple, high performance, edge WebRTC SFU"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cli = { path = "../libs/cli" }
iceserver = { path = "../libs/iceserver" }

tower-http = { version = "0.5.2", features = ["fs", "auth", "trace", "cors"] }
tower = { version = "0.5.2", features = ["util"] }
bytes = "1"
rtp = "0.14" 
tokio-stream = "0.1.15"
serde_json = "1.0.114"
serde = { workspace = true, features = ["serde_derive"] }
anyhow = "1.0"
rand = "0.9.2"
toml = "0.9.2"
chrono = "0.4"
jsonwebtoken = "9.3"
base64 = "0.22.1"
axum = "0.7.5"
axum-test = "15.0"
axum-extra = { version = "0.9.3", features = ["query"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
argon2 = "0.5.3"
webrtc = { workspace = true }
config = { version = "0.15.13", features = ["toml"] } 
libc = "0.2"
rtp-rs = "0.6.0"
rust-embed = { version = "8.4", features = ["axum-ex"], optional = true }
mime_guess = { version = "2.0", optional = true }

[features]
webui = ["dep:rust-embed","dep:mime_guess"]
net4mqtt = []