[package]
name = "livecam"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cli = { path = "../libs/cli" }
iceserver = { path = "../libs/iceserver" }
milkv-libs = { git = "https://github.com/Marsyew/milkv-libs", tag = "v1.0.5" }

anyhow = { workspace = true }
axum = "0.7.5"
axum-test = "15.0"
argon2 = "0.5.3"
axum-extra = { workspace = true, optional = true }
bytes = "1"
base64 = "0.22.1"
chrono = "0.4"
config = { version = "0.15.13", features = ["toml"] } 
jsonwebtoken = "9.3"
libc = "0.2"
mime_guess = { workspace = true, optional = true }
rtp-rs = "0.6.0"
rtp = "0.14" 
rand = "0.9.2"
rust-embed = { workspace = true, optional = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
toml = "0.9.2"
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1.15"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { workspace = true, features = ["fs", "auth", "trace", "cors"] }
webrtc = { workspace = true }

[features]
webui = ["dep:rust-embed","dep:mime_guess"]
net4mqtt = []