[package]
name = "liveion"
description = "A very simple, high performance, edge WebRTC SFU"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
api = { path = "../libs/api" }
auth = { path = "../libs/auth" }
http-log = { path = "../libs/http-log" }
iceserver = { path = "../libs/iceserver" }
libwish = { path = "../libs/libwish" }
storage = { path = "../libs/storage", optional = true }

net4mqtt = { path = "../libs/net4mqtt", optional = true }

axum = { workspace = true, features = ["multipart", "tracing"] }
axum-extra = { workspace = true, features = ["query"] }
tower-http = { workspace = true, features = ["trace", "cors"] }
rust-embed = { workspace = true, features = ["axum-ex"], optional = true }
mime_guess = { workspace = true, optional = true }
anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true, features = ["derive"] }
http = { workspace = true }
http-body = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.15"
async-stream = "0.3.5"
tracing = { workspace = true }
webrtc = { workspace = true }
uuid = { workspace = true }

async-trait = "0.1"
chrono = "0.4"
lazy_static = "1.4.0"
md-5="0.10.6"
prometheus = "0.14"
once_cell = "1.19"
bytes = { version = "1.6.0", optional = true }
byteorder = { version = "1.5", optional = true }
livetwo = { path = "../livetwo", optional = true }
h264-reader = { version = "0.8", optional = true }
opendal = { version = "0.54.0", optional = true }
scuffle-h265 = { version = "0.2.2", optional = true }

glob = "0.3"
url = { version = "2.5", optional = true }

[features]
webui = ["dep:rust-embed", "dep:mime_guess"]
net4mqtt = ["dep:net4mqtt"]
recorder = [
    "dep:storage",
    "dep:opendal",
    "dep:bytes",
    "dep:h264-reader",
    "dep:livetwo",
    "dep:byteorder",
    "dep:url",
    "dep:scuffle-h265",
]

[dev-dependencies]
tempfile = "3.10"
