[package]
name = "liveion"
description = "A very simple, high performance, edge WebRTC SFU"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
api = { path = "../libs/api" }
auth = { path = "../libs/auth" }
http-log = { path = "../libs/http-log" }
iceserver = { path = "../libs/iceserver" }
libwish = { path = "../libs/libwish" }
storage = { path = "../libs/storage", optional = true }
rtsp = { path = "../libs/rtsp", optional = true }
net4mqtt = { path = "../libs/net4mqtt", optional = true }
livesrc = { path = "../livesrc", optional = true }

axum = { workspace = true, features = ["multipart", "tracing"] }
axum-extra = { workspace = true, features = ["query"] }
tower-http = { workspace = true, features = ["trace", "cors"] }
rust-embed = { workspace = true, features = ["axum-ex"], optional = true }
mime_guess = { workspace = true, optional = true }
anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true, features = ["derive"] }
http = { workspace = true }
http-body = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rand = "0.10"
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tokio-stream = "0.1.15"
async-stream = "0.3.5"
tracing = { workspace = true }
webrtc = { workspace = true }
rtc = { workspace = true }
sdp = { workspace = true }
rtc-rtp = { workspace = true }
rtc-rtcp = { workspace = true }
sansio = "1.0"
rtc-interceptor = { workspace = true }
rtc-shared = { workspace = true }
uuid = { workspace = true }
libc = "0.2"

async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
md-5 = "0.10.6"
prometheus = "0.14"
once_cell = "1.19"
bytes = "1.6.0"
byteorder = { version = "1.5", optional = true }
livetwo = { path = "../livetwo", optional = true }
h264-reader = { version = "0.8", optional = true }
opendal = { version = "0.55", optional = true }
scuffle-h265 = { version = "0.2.2", optional = true }

glob = "0.3"
url = { workspace = true, optional = true }
fs2 = "0.4"
base64 = { workspace = true }

[features]
webui = ["dep:rust-embed", "dep:mime_guess"]
net4mqtt = ["dep:net4mqtt"]
recorder = [
    "dep:storage",
    "dep:opendal",
    "dep:h264-reader",
    "dep:livetwo",
    "dep:byteorder",
    "dep:scuffle-h265",
]

source = ["dep:rtsp", "dep:url"]
source-sdp = ["source"]
source-rtsp = ["source"]
source-rtp = ["source"]

native-source = ["dep:livesrc"]

# --- native source / encoder features ---
# Each enables native-source (→ livesrc crate) + the corresponding
# livesrc capture-* / encoder-* feature.
livesrc-libcamera = ["source", "native-source", "livesrc/capture-libcamera"]
livesrc-v4l2 = ["source", "native-source", "livesrc/capture-v4l2"]
liveenc-v4l2-m2m = ["native-source", "livesrc/encoder-v4l2-m2m"]
liveenc-rdk = ["native-source", "livesrc/encoder-rdk"]

# (future) livesrc-encoded-source = ["native-source", "livesrc/encoded-source-waybeam-venc"]

# Platform presets (recommended for users)
# native-rpi: 同时编译 libcamera 和 V4L2 source。
#   Pi CSI 摄像头走 capture-libcamera，Pi USB 摄像头走 capture-v4l2。
native-rpi = ["livesrc-libcamera", "livesrc-v4l2", "liveenc-v4l2-m2m"]
native-generic-v4l2 = ["livesrc-v4l2", "liveenc-v4l2-m2m"]
native-rdk = ["livesrc-v4l2", "liveenc-rdk"]

# --- deprecated aliases (1:1, will be removed) ---
source-libcamera = ["livesrc-libcamera"]
source-v4l2 = ["livesrc-v4l2"]
backend-rdk-x5 = ["liveenc-rdk"]
encoder-rdk-x5 = ["liveenc-rdk"]
source-all = ["source-sdp", "source-rtsp", "source-rtp", "source-libcamera", "source-v4l2"]

[dev-dependencies]
tempfile = "3.26"
toml = "1.0"
