[package]
name = "liveion"
description = "A very simple, high performance, edge WebRTC SFU"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
api = { path = "../libs/api" }
auth = { path = "../libs/auth" }
http-log = { path = "../libs/http-log" }
iceserver = { path = "../libs/iceserver" }
libwish = { path = "../libs/libwish", optional = true }
storage = { path = "../libs/storage", optional = true }
rtsp = { path = "../libs/rtsp", optional = true }
net4mqtt = { path = "../libs/net4mqtt", optional = true }
livesrc = { path = "../livesrc", optional = true }

axum = { workspace = true, features = ["multipart", "tracing"] }
axum-extra = { workspace = true, features = ["query"] }
tower-http = { workspace = true, features = ["trace", "cors"] }
rust-embed = { workspace = true, features = ["axum-ex"], optional = true }
mime_guess = { workspace = true, optional = true }
anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true, features = ["derive"] }
http = { workspace = true }
http-body = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rand = "0.10"
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tokio-stream = "0.1.15"
async-stream = "0.3.5"
tracing = { workspace = true }
webrtc = { workspace = true }
rtc = { workspace = true }
sdp = { workspace = true }
rtc-rtp = { workspace = true }
rtc-rtcp = { workspace = true }
sansio = "1.0"
rtc-interceptor = { workspace = true }
rtc-shared = { workspace = true }
uuid = { workspace = true }

async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
version = { path = "../libs/version" }
lazy_static = "1.4.0"
md-5 = "0.10.6"
prometheus = "0.14"
once_cell = "1.19"
bytes = "1.6.0"
byteorder = { version = "1.5", optional = true }
livetwo = { path = "../livetwo", optional = true }
h264-reader = { version = "0.8", optional = true }
opendal = { version = "0.55", optional = true }
scuffle-h265 = { version = "0.2.2", optional = true }

glob = "0.3"
url = { workspace = true, optional = true }
fs2 = "0.4"

[features]
webui = ["dep:rust-embed", "dep:mime_guess"]
cascade = ["dep:libwish"]
net4mqtt = ["dep:net4mqtt"]
recorder = [
    "dep:storage",
    "dep:opendal",
    "dep:h264-reader",
    "dep:livetwo",
    "dep:byteorder",
    "dep:scuffle-h265",
]

source = ["dep:rtsp", "dep:url"]
source-sdp = ["source"]
source-rtsp = ["source"]
source-all = ["source-sdp", "source-rtsp"]

native-source = ["source", "dep:livesrc"]

# Platform presets
# native-rpi: builds both libcamera (Pi CSI camera) and V4L2 (Pi USB camera).
native-rpi = ["native-source", "livesrc/capture-libcamera", "livesrc/capture-v4l2", "livesrc/encoder-v4l2-m2m"]
native-generic-v4l2 = ["native-source", "livesrc/capture-v4l2", "livesrc/encoder-v4l2-m2m"]
native-rdk = ["native-source", "livesrc/capture-v4l2", "livesrc/encoder-rdk"]

[dev-dependencies]
tempfile = "3.26"
toml = "1.0"
