[package]
name = "livetwo"
description = "WHIP/WHEP convert RTP/RTSP tool"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
cli = { path = "../libs/cli" }
rtsp = { path = "../libs/rtsp", default-features = false, features = ["client"] }
libwish = { path = "../libs/libwish" }
api = { path = "../libs/api" }

anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
webrtc = { workspace = true }
rtc = { workspace = true }
sdp = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }

bytes = "1.6.0"
scopeguard = "1.2.0"
md-5 = "0.10"
portpicker = "0.1.1"
sdp-types = "0.1"
async-trait = "0.1"
rand = "0.10"
rtc-rtcp = { workspace = true }
rtc-shared = { workspace = true }
