[package]
name = "auth"
edition.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
api = { path = "../api" }
axum = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
http = { workspace = true }
http-body = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }

headers = "0.4"
jsonwebtoken = "9.3"
