[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
webrtc = { git = "https://github.com/a-wing/webrtc-rs", rev = "b5cc6a35446793bd7923ef1f49b44cbce77cf21e" }
shellwords = "1.1.0"
anyhow = "1.0"
